fixed divs going off screen

--- a/app/assets/stylesheets/api/businesses.scss
+++ b/app/assets/stylesheets/api/businesses.scss
@@ -11,7 +11,6 @@
 header.header-nav {
   display: flex;
   justify-content: space-between;
-  width: 100vw;
   height: 3em;
   background: rgba(69, 115, 147, 1);
   // border: 2px solid rgba(169,240,255, 0.25);
