--- a/app/assets/stylesheets/api/reviews.scss
+++ b/app/assets/stylesheets/api/reviews.scss
@@ -6,7 +6,7 @@ section.review-index-container {
   display: flex;
   flex-direction: column;
   word-wrap: break-word;
-  height: calc(100vh - 56px);
+  height: auto;
   min-width: 200px;
   max-width: 250px;
   // background: #29475f;
