--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,4 +90,8 @@ html, body {
 }
 .main-app {
   height: 100%;
+  width: 100%;
+}
+.main-page {
+  width: 100%;
 }
